fix: fixing z-index issues and min-height on fieldset

--- a/frontend/components/pathbar/pathbar.module.css
+++ b/frontend/components/pathbar/pathbar.module.css
@@ -1,14 +1,14 @@
 .pathbar
 {
-    position: sticky;
+    position: fixed;
     display: flex;
-    top: 0px;
+    top: 6vh;
     flex-direction: row;
     width: 100%;
     padding: 10px;
     height: 4vh;
     font-size: 0.75em;
     background-color: #34567C;
-    z-index: 9;
+    z-index: 1;
     color: white;
 }
